Overflow fix

--- a/base.css
+++ b/base.css
@@ -7,8 +7,12 @@
   padding: 0;
 }
 
+html,
+body {
+  overflow: hidden;
+}
+
 :root {
-  overflow-x: hidden;
   scroll-behavior: smooth;
   font-size: 16px;
 
